hphp/hack/test/typecheck/enum_xhp_child.php.rust_elab.exp
File "enum_xhp_child.php", line 4, characters 6-7:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
File "enum_xhp_child.php", line 13, characters 6-7:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
